--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,5 +10,10 @@
 
 <%= yield %>
 
+
+<%= flash.each do |name, msg| %>
+<%= content_tag(:div, msg, class: "alert alert-#{name}") %>
+<% end %>
+
 </body>
 </html>
