Authorization on links

--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -12,6 +12,7 @@
   </thead>
 
   <tbody>
+
     <% @links.each do |link| %>
       <tr>
         <td><%= link.title %></td>
@@ -26,4 +27,4 @@
 
 <br>
 
-<%= link_to 'New Link', new_link_path %>
+<!-- <%= link_to 'New Link', new_link_path %>  --> 
