--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -19,3 +19,23 @@
 	<td><%= link_to 'Edit', edit_link_path(@link) %></td>
     <td><%= link_to 'Destroy', @link, method: :delete, data: {confirm: 'Are you sure?'} %></td>
 <% end %>
+
+
+
+<h3 class = "comments_title">
+	<%= @link.comments.count %> Comments
+</h3>
+
+<div id = "comments">
+	<%= render :partial => @link.comments %>
+</div>
+
+<%= simple_form_for [@link, Comment.new] do |f| %>
+	<div class = "field">
+		<%= f.text_area :body, class: "form-control" %>
+	</div>
+	<br>
+	<%= f.submit "Add Comment", class: "btn btn-primary" %>
+<% end %>
+
+
