--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -26,6 +26,8 @@
 	<%= @link.comments.count %> Comments
 </h3>
 
+<h1><a href="<%= @link.url %>"><%= @link.title %></a><br> <small>Submitted by <%= @link.user.name %></small></h1>
+
 <div id = "comments">
 	<%= render :partial => @link.comments %>
 </div>
